the last update is terms of the setup, blog site all ready

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,12 +41,13 @@
   :where([class*="text-"]) {
     font-size: 1rem !important;   /* catches sm:text-*, text-[15px], etc. */
     font-weight: inherit;
+    letter-spacing: 0.2px;
   }
 }
 
 @font-face {
   font-family: 'font-regular';
-  src: url('/fonts/inter.woff') format('woff');
+  src: url('/fonts/isemb.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
