--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
 
 @font-face {
   font-family: 'font-regular';
-  src: url('/fonts/incon.woff') format('woff');
+  src: url('/fonts/blinkbold.woff') format('woff');
   font-style: normal;
   font-display: swap;
 }
