--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,8 @@
   }
 
   body {
-    background: radial-gradient(125% 125% at 50% 10%, #000 25%, rgb(49, 49, 49) 100%);
+    background-color: #0d0d10;
+    background-image: radial-gradient(100% 50% at 50% 0%, rgba(255, 255, 255, 0.13) 0, rgba(189, 189, 189, 0) 50%, rgba(0,163,255,0) 100%);
     color: #ffffff;
     font-family: var(--font-onest), "Onest", system-ui, -apple-system, sans-serif;
     letter-spacing: -0.01em;
